--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
              <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
             <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
           </ul>
-          <div class="top-bar-section">
+          <div class="section top-bar-section">
             <ul class="right">
               <li><%= link_to("ABOUT THE PROJECT", controller: "pages", action: "about") %></li>
               <li><%= link_to("CONNECTED NETWORK", controller: "articles") %></li>
