--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,6 @@
  * file per style scope.
  *
  *= require reset
- *= require foundation_and_overrides
+ *= require foundation
  *= require od4d
  */
