--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
         <a href="/"><%= image_tag("logo-od4d2.png", :alt => "Open Data for Development") %></a>
       </div>
       <div class="div-nav-menu">
-        <nav class="top-bar nav-alignment" data-topbar role="navigation">
+        <nav class="top-bar" data-topbar role="navigation">
           <ul class="title-area">
             <li class="name">
             </li>
@@ -26,7 +26,7 @@
             <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
           </ul>
           <div class="section top-bar-section">
-            <ul class="right">
+            <ul>
               <li><%= link_to("ABOUT THE PROJECT", controller: "pages", action: "about") %></li>
               <li><%= link_to("CONNECTED NETWORK", controller: "articles") %></li>
               <li><%= link_to("PARTNERS", controller: "partners") %></li>
