--- a/app/assets/stylesheets/od4d.css
+++ b/app/assets/stylesheets/od4d.css
@@ -298,7 +298,7 @@ article.rss {
     border-width: 1px;
 	border-bottom-color: #cccccc;
 	padding-bottom: 15px;
-	margin: 0px 22px 22px 0px;
+	margin: 0px 0px 22px 0px;
 	padding-bottom: 15px;
 }
 article.partners {
@@ -361,7 +361,7 @@ p.date
 .feeds {
 	margin-top: 0px;
 	padding-top: 0px;
-	width: 100%;
+	max-width: 100%;
 	position: relative;
 	float: left;
 }
