--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,6 +63,6 @@
       </div>
     </div>
   </footer>
-  <%= render :partial => '/layouts/ga_script' if ENV["USE_GOOGLE_ANALYTICS_SCRIPT"] == "true" %>
+  <%= render :partial => '/layouts/ga_script' if Rails.application.config.use_google_analytics %>
 </body>
 </html>
